--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 version: '3.1'
 services:
   app:
-    image: app
     container_name: web_server
     build: 
-      context: ./
+      context: .
     depends_on:
       - db
     ports:
       - "3001:3001"
+    restart: on-failure:5
     
 
   db:
